# reach-assignment

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  models.py  schemas.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/routes/: api_keys.py  auth.py  health.py  job_stream.py  jobs.py  metrics.py
backend/app/core/: config.py  database.py
backend/app/observability/: metrics.py  tracing.py
backend/app/repositories/: api_keys.py  jobs.py  metrics.py  users.py  worker_jobs.py
backend/app/services/: quotas.py  security.py  submission_rate_limits.py
backend/app/workers/: __init__.py  handlers.py  lease_reaper.py  settings.py  worker.py
backend/migrations/: env.py
backend/migrations/versions/: 20260430_0001_auth_tables.py  20260430_0002_api_key_indexes.py  20260430_0003_jobs_tables.py  20260501_0004_worker_db_layer.py  20260502_0005_submission_rate_limits.py  20260503_0006_job_event_stream_cursor_index.py  20260503_0007_add_job_lease_id.py
backend/tests/: conftest.py  test_api_keys.py  test_auth.py  test_database.py  test_job_stream.py  test_jobs.py  test_metrics.py  test_worker_schema.py  test_workers.py
docs/: ARCHITECTURE.md  CRUD_SERVER.md  WORKERS.md
frontend/: Dockerfile  README.md  eslint.config.js  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/components/ui/: select.tsx  textarea.tsx
frontend/src/features/auth/: account-panel.tsx  auth-queries.ts  (+2 more)
frontend/src/lib/: api-client.ts  api-keys-api.ts  auth-api.ts  jobs-api.ts  query-client.ts
(+18 files in other folders)
